--- a/AirportReportUi/src/app/search-bar/search-bar.component.css
+++ b/AirportReportUi/src/app/search-bar/search-bar.component.css
@@ -1,7 +1,7 @@
 .search-bar {
     display: flex;
     justify-content: center;
-    width: 80%;
+    width: 450px;
     max-width: 600px;
     margin-top: 40px;
 }
@@ -10,4 +10,10 @@ input {
     width: 100%;
     padding: 10px;
     font-size: 16px;
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    margin-top: 10px;
 }
