--- a/AirportReportUi/src/app/search-bar/search-bar.component.html
+++ b/AirportReportUi/src/app/search-bar/search-bar.component.html
@@ -1,3 +1,4 @@
 <div class="search-bar">
     <input type="text" placeholder="Enter one or more ICAOs separated by commas"/>
+    <button mat-raised-button (click)="onGoButtonClick()">Go</button>
 </div>
