--- a/AirportReportUi/src/app/components/airports/airports.component.html
+++ b/AirportReportUi/src/app/components/airports/airports.component.html
@@ -1,40 +1,44 @@
 <h2>Airports</h2>
-<ul >
-    <li *ngFor="let airport of airports">
-        <div>
-            <h5>Details</h5>
-            <span>ICAO: {{airport.identifier}}</span>
-            <br>
-            <span>Name: {{airport.name}}</span>
-            <br>
-            <span>Latitude: {{airport.latitude}}</span>
-            <br>
-            <span>Longitude: {{airport.longitude}}</span>
-            <br>
-            <h5>Weather</h5>
-            <span>Temperature: {{airport.weather.temperatureInF}}</span>
-            <br>
-            <span>Humidity: {{airport.weather.relativeHumidity}}</span>
-            <br>
-            <span>Clouds: {{airport.weather.cloudCoverage}}</span>
-            <br>
-            <span>Visibility: {{airport.weather.visibilitySm}}</span>
-            <br>
-            <span>Wind Speed: {{airport.weather.windSpeedMph}}</span>
-            <br>
-            <span>Wind Direction: {{airport.weather.windDirection}}</span>
-            <br>
-            <h5>Forecasted Winds:</h5>
-            <br>
-            <li *ngFor="let forecast of airport.weather.windForecasts">
-                <span>Time Until Active: {{forecast.timeOffset}}</span>
+<div fxLayout="row" fxLayoutAlign="center center">
+    <div fxFlex="25%"></div>
+    <div fxFlex="50%">
+        <mat-card *ngFor="let airport of airports" class="card mat-secondary">
+            <mat-card-header>
+                <span>ICAO: {{airport.identifier}}</span>
                 <br>
-                <span>Speed: {{forecast.windSpeedKts}} kts</span>
-                <br>
-                <span>Direction: {{forecast.windDirectionDegrees}}</span>
-            </li>
-        </div>
-        
-
-    </li>
-</ul>
+                <span>Name: {{airport.name}}</span>
+            </mat-card-header>
+            <mat-card-content>
+                <div>
+                    <span>Latitude: {{airport.latitude}}</span>
+                    <br>
+                    <span>Longitude: {{airport.longitude}}</span>
+                    <br>
+                    <h5>Weather</h5>
+                    <span>Temperature: {{airport.weather.temperatureInF}}</span>
+                    <br>
+                    <span>Humidity: {{airport.weather.relativeHumidity}}</span>
+                    <br>
+                    <span>Clouds: {{airport.weather.cloudCoverage}}</span>
+                    <br>
+                    <span>Visibility: {{airport.weather.visibilitySm}}</span>
+                    <br>
+                    <span>Wind Speed: {{airport.weather.windSpeedMph}}</span>
+                    <br>
+                    <span>Wind Direction: {{airport.weather.windDirection}}</span>
+                    <br>
+                    <h5>Forecasted Winds:</h5>
+                    <br>
+                    <li *ngFor="let forecast of airport.weather.windForecasts">
+                        <span>Time Until Active: {{forecast.timeOffset}}</span>
+                        <br>
+                        <span>Speed: {{forecast.windSpeedKts}} kts</span>
+                        <br>
+                        <span>Direction: {{forecast.windDirectionDegrees}}</span>
+                    </li>
+                </div>
+            </mat-card-content>
+        </mat-card>
+    </div>
+    <div fxFlex="25%"></div>
+</div>
