--- a/AirportReportUi/src/app/components/search-bar/search-bar.component.html
+++ b/AirportReportUi/src/app/components/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
 <div class="search-bar">
     <input type="text" placeholder="Enter one or more ICAOs separated by spaces"/>
-    <button mat-raised-button (click)="onGoButtonClick()">Go</button>
+    <button (click)="onGoButtonClick()">Go</button>
 </div>
