Cleans up lat/long display in card

--- a/AirportReportUi/src/app/components/airports/airports.component.html
+++ b/AirportReportUi/src/app/components/airports/airports.component.html
@@ -5,7 +5,7 @@
                 <h3 class="text-center">{{ airport.name }} ({{ airport.identifier }})</h3>
             </div>
             <div class="col-md-4 flex-fill">
-                <p>Lat/Long: {{airport.latitude}}/{{airport.longitude}}</p>
+                <p>{{airport.latitude}} {{airport.longitude}}</p>
             </div>
         </div>
       
