--- a/AirportReportUi/src/app/app.component.html
+++ b/AirportReportUi/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>{{title}}</h1>
-<h4>{{subtitle}}</h4>
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+  <a class="navbar-brand" href="#">
+    <h1>FlyWise</h1>
+  </a>
+</nav>
 <router-outlet></router-outlet>
