Reduces padding of jumbotron

--- a/AirportReportUi/src/app/components/airports/airports.component.html
+++ b/AirportReportUi/src/app/components/airports/airports.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div *ngFor="let airport of airports" class="jumbotron">
-        <div class="row d-flex">
+    <div *ngFor="let airport of airports" class="jumbotron custom-jumbotron">
+        <div class="row d-flex align-items-center my-2">
             <div class="col-md-8 flex-fill">
                 <h3 class="text-center">{{ airport.name }} ({{ airport.identifier }})</h3>
             </div>
