--- a/AirportReportUi/src/app/components/airports/airports.component.css
+++ b/AirportReportUi/src/app/components/airports/airports.component.css
@@ -12,3 +12,10 @@ p {
 .col-md-4 {
     flex: 1;
 }
+
+.custom-jumbotron {
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-top: 8px;
+    padding-bottom: 30px;
+}
