Vertically positions landing page content

--- a/AirportReportUi/src/app/components/search-bar/search-bar.component.html
+++ b/AirportReportUi/src/app/components/search-bar/search-bar.component.html
@@ -1,4 +1,11 @@
-<div class="search-bar">
-    <input type="text" placeholder="Enter one or more ICAOs separated by spaces"/>
-    <button (click)="onGoButtonClick()">Go</button>
+<div class="d-flex container">
+    <div class="row">
+        <div class="col-10">
+            <input class="form-control form-control-lg mr-sm-2" type="search" placeholder="kgeg ksfo kboi" aria-label="Search">
+        </div>
+        <div class="col-2">
+            <button class="btn btn-outline-success btn-lg my-2 my-sm-0" type="button" (click)="onGoButtonClick()">Go!</button>
+        </div>
+    </div>
 </div>
+
