--- a/AirportReportUi/src/app/components/landing-page/landing-page.component.html
+++ b/AirportReportUi/src/app/components/landing-page/landing-page.component.html
@@ -1,4 +1,11 @@
-<div class="landing-page">
-    <h1>{{ pageTitle }}</h1>
-    <app-search-bar></app-search-bar>
+<div class="container" style="margin-top: 15%;">
+    <div class="d-flex justify-content-center align-items-center">
+        <h1>{{ pageTitle }}</h1>
+    </div>
+    <div class="d-flex justify-content-center align-items-center">
+        <h4>{{ pageSubtitle}}</h4>
+    </div>
+    <div class="d-flex justify-content-center align-items-center">
+        <app-search-bar></app-search-bar>
+    </div>
 </div>
