--- a/AirportReportUi/src/app/components/search-bar/search-bar.component.css
+++ b/AirportReportUi/src/app/components/search-bar/search-bar.component.css
@@ -1,19 +1,10 @@
-.search-bar {
-    display: flex;
-    justify-content: center;
-    width: 450px;
-    max-width: 600px;
-    margin-top: 40px;
+.form-control-lg {
+    height: 60px;
+    font-size: 24px;
+    width: 550px;
 }
 
-input {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-}
-
-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    margin-top: 10px;
+.btn-lg {
+    padding: 15px 30px;
+    font-size: 18px;
 }
