--- a/AirportReportUi/src/app/components/search-bar/search-bar.component.html
+++ b/AirportReportUi/src/app/components/search-bar/search-bar.component.html
@@ -4,7 +4,10 @@
             <input class="form-control form-control-lg mr-sm-2" type="search" placeholder="kgeg ksfo kboi" aria-label="Search">
         </div>
         <div class="col-2">
-            <button class="btn btn-outline-success btn-lg my-2 my-sm-0" type="button" (click)="onGoButtonClick()">Go!</button>
+            <button class="btn btn-outline-success btn-lg my-2 my-sm-0" type="button" (click)="onGoButtonClick()">
+                Go!
+                <span *ngIf="(loading$ | async)" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            </button>
         </div>
     </div>
 </div>
