Adds welcome message in navbar

--- a/AirportReportUi/src/app/app.component.html
+++ b/AirportReportUi/src/app/app.component.html
@@ -1,6 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-  <a class="navbar-brand" href="#">
-    <h1>FlyWise</h1>
-  </a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top d-flex justify-content-between">
+  
+    <a class="navbar-brand" style="position: absolute; left: 15px; top: 10%" href="#">
+      <h1>FlyWise</h1>
+    </a>
+
+    <div class="navbar-text" style="position: absolute; right: 15px; top: -10%">
+      <h3>
+        Welcome, Aviator!
+      </h3>
+      
+    </div>
+  
 </nav>
 <router-outlet></router-outlet>
