Adds go back button

--- a/AirportReportUi/src/app/app.component.html
+++ b/AirportReportUi/src/app/app.component.html
@@ -4,11 +4,12 @@
       <h1>FlyWise</h1>
     </a>
 
+    <button type="button" class="btn btn-primary" (click)="goBack()">Go Back</button>
+
     <div class="navbar-text" style="position: absolute; right: 15px; top: -10%">
       <h3>
         Welcome, Aviator!
       </h3>
-      
     </div>
   
 </nav>
