Moves go back button to airports component

--- a/AirportReportUi/src/app/components/airports/airports.component.html
+++ b/AirportReportUi/src/app/components/airports/airports.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <button type="button" class="btn btn-lg btn-primary" (click)="goBack()" style="margin-bottom: 20px">Go Back</button>
+</div>
+<div class="container">
     <div *ngFor="let airport of airports" class="jumbotron custom-jumbotron">
         <div class="row d-flex align-items-center my-2">
             <div class="col-md-8 flex-fill">
