Make search bar placeholder lighter

--- a/AirportReportUi/src/app/components/search-bar/search-bar.component.html
+++ b/AirportReportUi/src/app/components/search-bar/search-bar.component.html
@@ -1,10 +1,10 @@
 <div class="d-flex container">
     <div class="row">
         <div class="col-10">
-            <input class="form-control form-control-lg mr-sm-2" type="search" placeholder="kgeg ksfo kboi" aria-label="Search">
+            <input [(ngModel)]="inputValue" (input)="updateButtonState()" class="form-control form-control-lg mr-sm-2" type="search" placeholder="(ex: kgeg ksfo kboi)" aria-label="Search">
         </div>
         <div class="col-2">
-            <button class="btn btn-outline-success btn-lg my-2 my-sm-0" type="button" (click)="onGoButtonClick()" id="goButton">Go!</button>
+            <button [disabled]="isButtonDisabled" class="btn btn-outline-success btn-lg my-2 my-sm-0" type="button" (click)="onGoButtonClick()" id="goButton">Go!</button>
         </div>
     </div>
 </div>
