--- a/AirportReportUi/src/app/components/search-bar/search-bar.component.html
+++ b/AirportReportUi/src/app/components/search-bar/search-bar.component.html
@@ -8,6 +8,15 @@
         </div>
     </div>
 </div>
+<div class="container mt-4">
+    <div class="row">
+      <div class="col-12">
+        <div *ngIf="isErrorVisible" class="alert alert-danger error-alert" role="alert">
+          {{ errorMessage }}
+        </div>
+      </div>
+    </div>
+  </div>
 <div class="text-center" id="loadingDiv">
     <div class="spinner-border" role="status" >
         <span class="sr-only" id="loading">Loading...</span>
